--- a/style.css
+++ b/style.css
@@ -57,9 +57,12 @@ a{
 }
 
 @media (max-width:1020px) {
+    body{
+      margin:0;
+    }
     table{
-         top: 35%;
-         left: 12%;
+         top: 42%;
+         left: 5%;
     }
     h1{
         top: 3%;
